2005-11-26  Aaron Bockover  <aaron@aaronbock.net>

	* src/HalContext.cs: New Parent property that returns an instantiated
	Hal.Device object based on the info.parent HAL property, which returns 
	a UDI of a device's parent; added Context property to return the Device's
	HAL Context

2005-11-18 Aaron Bockover  <aaron@aaronbock.net>
	
	* src/HalContext.cs:
	* src/HalDevice.cs: Replaced Marshal.PtrToStringAnsi with 
	UnixMarshal.PtrToString
	* src/HalContext.cs: Added a public Context(IntPtr) constructor to 
	enable using an already created/initialized native context
	* src/Makefile.am: renamed hal-sharp.exe test to hal-test.exe
	* configure.ac: Version 0.3, output src/hal-sharp.dll.config
	* src/Makefile.am: Added hal-sharp.dll.config.in
	* src/Makefile.am: Added rule to build HalTest.cs
	* src/HalContext.cs: Removed destructor, must use Dispose()
	* src/*.cs: Tabs->Spaces, reformatted code a little

2005-07-17 Aaron Bockover <aaron@aaronbock.net>

	* HalTest.cs: GTK test for events using main context
	* HalContext.cs: Changed some constructors around, now defaults to 
	DbusBusType.System, added event system for HAL callbacks
	* HalUnmanaged.cs: Added callback set signatures
	* HalCallbacks.cs: Contains all callback and event delegates, and 
	event delegate args classes

2005-07-16 Aaron Bockover <aaron@aaronbock.net>

	* hal-sharp: Version 0.1 Committed to Mono SVN
	* hal-sharp: Most of HAL 0.5.2 API binding complete, decent set
	of classes, and most works. Bindings missing:

		- PSI Functions
		- Agent Functions
		- Callbacks
