@@ -25,6 +25,7 @@
     <File name="./src/HalContext.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/HalDefines.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/HalCallbacks.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/DBusError.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
